--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "build": "npm install && cd ../client && npm install && npm run build",
     "start": "node server.js",
     "server": "nodemon server.js --ignore './client/",
     "client": "npm start --prefix ./client",
-    "dev": "concurrently \"npm run start\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "Techinfoyt",
